# pandas_practice

./: README.md  alembic.ini  pyproject.toml
csv_files/: challenge_1_dataset.csv
database/: env.py  tables.py
database/versions/: cb515fac1b65_create_tables.py
src/: challenge_1_csv_reader.py
src/services/daos/: challenge_2_dao.py
